# SG_integration_step1

./: .coverage  .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  app.py  benchmark_report.md  demo_app.py  demo_app_temp.py  development_log.txt  docker-compose.yml  pyproject.toml  requirements-cloud.txt  requirements-local.txt  requirements.txt
.github/workflows/: python-app.yml
.streamlit/: config.toml
deepdrop_sfe/: __init__.py  ai_engine.py  perspective.py  physics_engine.py
docs/: ARCHITECTURE.md  advanced_002_report.md
evaluation/: data_entry_app.py  evaluate_accuracy.py  ground_truth_template.csv
src/curv/: curvature.py
src/seg/: sam2_wrapper.py
src/topo/: depth_wrapper.py
tests/: test_imports.py  test_integration.py
tools/: debug_tool.py  ground_truth.json
utils/: export_onnx.py
vsams/analysis/: surface_evaluator.py
